--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Clon de MeetUp desarrollado con Node, PostgreSQL y EJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon ./index.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sbedoyab99/meeti.git"
@@ -25,7 +26,17 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "nodemailer": "^6.9.3",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1"
   }
 }
