--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1"
   }
